EndOfUnitProject.css
body{
    background-color: #ffffff;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='100%25' gradientTransform='rotate(240)'%3E%3Cstop offset='0' stop-color='%23ffffff'/%3E%3Cstop offset='1' stop-color='%23FFFFFF'/%3E%3C/linearGradient%3E%3Cpattern patternUnits='userSpaceOnUse' id='b' width='540' height='450' x='0' y='0' viewBox='0 0 1080 900'%3E%3Cg fill-opacity='0.1'%3E%3Cpolygon fill='%23444' points='90 150 0 300 180 300'/%3E%3Cpolygon points='90 150 180 0 0 0'/%3E%3Cpolygon fill='%23AAA' points='270 150 360 0 180 0'/%3E%3Cpolygon fill='%23DDD' points='450 150 360 300 540 300'/%3E%3Cpolygon fill='%23999' points='450 150 540 0 360 0'/%3E%3Cpolygon points='630 150 540 300 720 300'/%3E%3Cpolygon fill='%23DDD' points='630 150 720 0 540 0'/%3E%3Cpolygon fill='%23444' points='810 150 720 300 900 300'/%3E%3Cpolygon fill='%23FFF' points='810 150 900 0 720 0'/%3E%3Cpolygon fill='%23DDD' points='990 150 900 300 1080 300'/%3E%3Cpolygon fill='%23444' points='990 150 1080 0 900 0'/%3E%3Cpolygon fill='%23DDD' points='90 450 0 600 180 600'/%3E%3Cpolygon points='90 450 180 300 0 300'/%3E%3Cpolygon fill='%23666' points='270 450 180 600 360 600'/%3E%3Cpolygon fill='%23AAA' points='270 450 360 300 180 300'/%3E%3Cpolygon fill='%23DDD' points='450 450 360 600 540 600'/%3E%3Cpolygon fill='%23999' points='450 450 540 300 360 300'/%3E%3Cpolygon fill='%23999' points='630 450 540 600 720 600'/%3E%3Cpolygon fill='%23FFF' points='630 450 720 300 540 300'/%3E%3Cpolygon points='810 450 720 600 900 600'/%3E%3Cpolygon fill='%23DDD' points='810 450 900 300 720 300'/%3E%3Cpolygon fill='%23AAA' points='990 450 900 600 1080 600'/%3E%3Cpolygon fill='%23444' points='990 450 1080 300 900 300'/%3E%3Cpolygon fill='%23222' points='90 750 0 900 180 900'/%3E%3Cpolygon points='270 750 180 900 360 900'/%3E%3Cpolygon fill='%23DDD' points='270 750 360 600 180 600'/%3E%3Cpolygon points='450 750 540 600 360 600'/%3E%3Cpolygon points='630 750 540 900 720 900'/%3E%3Cpolygon fill='%23444' points='630 750 720 600 540 600'/%3E%3Cpolygon fill='%23AAA' points='810 750 720 900 900 900'/%3E%3Cpolygon fill='%23666' points='810 750 900 600 720 600'/%3E%3Cpolygon fill='%23999' points='990 750 900 900 1080 900'/%3E%3Cpolygon fill='%23999' points='180 0 90 150 270 150'/%3E%3Cpolygon fill='%23444' points='360 0 270 150 450 150'/%3E%3Cpolygon fill='%23FFF' points='540 0 450 150 630 150'/%3E%3Cpolygon points='900 0 810 150 990 150'/%3E%3Cpolygon fill='%23222' points='0 300 -90 450 90 450'/%3E%3Cpolygon fill='%23FFF' points='0 300 90 150 -90 150'/%3E%3Cpolygon fill='%23FFF' points='180 300 90 450 270 450'/%3E%3Cpolygon fill='%23666' points='180 300 270 150 90 150'/%3E%3Cpolygon fill='%23222' points='360 300 270 450 450 450'/%3E%3Cpolygon fill='%23FFF' points='360 300 450 150 270 150'/%3E%3Cpolygon fill='%23444' points='540 300 450 450 630 450'/%3E%3Cpolygon fill='%23222' points='540 300 630 150 450 150'/%3E%3Cpolygon fill='%23AAA' points='720 300 630 450 810 450'/%3E%3Cpolygon fill='%23666' points='720 300 810 150 630 150'/%3E%3Cpolygon fill='%23FFF' points='900 300 810 450 990 450'/%3E%3Cpolygon fill='%23999' points='900 300 990 150 810 150'/%3E%3Cpolygon points='0 600 -90 750 90 750'/%3E%3Cpolygon fill='%23666' points='0 600 90 450 -90 450'/%3E%3Cpolygon fill='%23AAA' points='180 600 90 750 270 750'/%3E%3Cpolygon fill='%23444' points='180 600 270 450 90 450'/%3E%3Cpolygon fill='%23444' points='360 600 270 750 450 750'/%3E%3Cpolygon fill='%23999' points='360 600 450 450 270 450'/%3E%3Cpolygon fill='%23666' points='540 600 630 450 450 450'/%3E%3Cpolygon fill='%23222' points='720 600 630 750 810 750'/%3E%3Cpolygon fill='%23FFF' points='900 600 810 750 990 750'/%3E%3Cpolygon fill='%23222' points='900 600 990 450 810 450'/%3E%3Cpolygon fill='%23DDD' points='0 900 90 750 -90 750'/%3E%3Cpolygon fill='%23444' points='180 900 270 750 90 750'/%3E%3Cpolygon fill='%23FFF' points='360 900 450 750 270 750'/%3E%3Cpolygon fill='%23AAA' points='540 900 630 750 450 750'/%3E%3Cpolygon fill='%23FFF' points='720 900 810 750 630 750'/%3E%3Cpolygon fill='%23222' points='900 900 990 750 810 750'/%3E%3Cpolygon fill='%23222' points='1080 300 990 450 1170 450'/%3E%3Cpolygon fill='%23FFF' points='1080 300 1170 150 990 150'/%3E%3Cpolygon points='1080 600 990 750 1170 750'/%3E%3Cpolygon fill='%23666' points='1080 600 1170 450 990 450'/%3E%3Cpolygon fill='%23DDD' points='1080 900 1170 750 990 750'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='100%25' height='100%25'/%3E%3Crect x='0' y='0' fill='url(%23b)' width='100%25' height='100%25'/%3E%3C/svg%3E");
    background-attachment: fixed;
    background-size: cover;
}
a {
    color: #cb703a;
}
.navbar{
    display:flex;
    background-color: #92becf;
    padding:10px;
    justify-content: space-evenly;
    font-family: myFont;
    color: #cb703a;
    font-size: x-large;
    align-items: center;
}
.navbar1{
    background-color: #92becf;
}
.fnfont {
    font-family: myFont;
    color: #cb703a;
    font-size: 40px;
}
.searchbar{
    display:flex;
    justify-content: center;
    font-size: 100px;
}
.logo {
    z-index: 2;
    display: flex;
    justify-content: center;
    align-items: center;
    grid-template-columns: second/third;
} 
.footer {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    background-color: #92becf;
}
.attentionGrabbar {
    grid-column: first/second;
    border-style: solid;
    justify-content: center;
    padding: 7px;
    margin-top: 50px;
    margin-bottom: 50px;
}
.centralPart {
    display: grid;
    grid-template-columns: [first] 1fr [second] 1fr [third] 1fr [end]; 
}
.Backstory {
    border-style: solid;
    justify-content: center;
    padding: 7px;
    margin-top: 50px;
    margin-bottom: 50px;
}
.contact {
    display: grid;
    justify-content: center;
    grid-template-columns: [uno] 1fr [dos] 1fr [tres] 1fr [end];
}
div.contact > img {
    grid-column: dos/tres;
}
div.contact > h2 {
    grid-column: dos/tres;
}
.order {
    margin: auto;
}
.orderForm {
    display: flex;
    justify-content: center;
}
.container {
    display:grid;
    grid-template-columns: [a] 1fr [b] 1fr [end];
    grid-template-rows: [f] 1fr [g] 1fr [h] 1fr [end];
    gap: 10px;
    padding:10px;
    margin-top: 80px;
    margin-bottom: 80px;
    margin-left: 30px;
}
#h1B {
    display: flex;
    font-family: myFont;
    color: #cb703a;
    justify-content: center;
}
.item-1 {
    grid-column: a / b;
    grid-row: f / g;
    margin-left: 150px;
}
.item-2 {
    grid-column: b / end;
    grid-row: f / g;
    margin-left: 150px;
}
.item-3 {
    grid-column: a / b;
    grid-row: g / h;
    margin-left: 150px;
}
.item-4 {
    grid-column: b / end;
    grid-row: g / h;
    margin-left: 150px;
}
.item-5 {
    grid-column: a / b;
    grid-row: h / end;
    margin-left: 150px;
}
.item-6 {
    grid-column: b / end;
    grid-row: h / end;
    margin-left: 150px;
}
div.container > div > img {
    font-family: myFont2;
}

@font-face {
    font-family: myFont;
    src: url(./KellySlab-Regular.ttf);
}
@font-face {
    font-family: myFont2;
    src: url(./Montserrat-VariableFont_wght.ttf);
}
.imgss{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

@media (max-width: 479px) {
    img {
        width: 100%;
    }
}
    

.imgss img{
    margin-top: 10px;
    margin-bottom: 10px;
    max-height: 479px;
    height: 300px;
    width:300px;
}
.vidchick{
    display: flex;
    justify-content: center;
    height: auto;
    width: auto;
    max-height: 479px;
    margin-bottom: 20px;
}

